Update menu background color and menu section color

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /* Reset & Base */
 * { margin: 0; padding: 0; box-sizing: border-box; }
-body { font-family: 'Segoe UI', sans-serif; line-height: 1.6; background-color: #fae4d2; }
+body { font-family: 'Segoe UI', sans-serif; line-height: 1.6; background-color: #ffffff; }
 
 /* Menu Section */
  #menu {
-    color:#ccc
+    color:#ffffff
  }
  #menu h2 {
     color: #000000;
